# cdmodel

./: .gitignore  README.md  pyproject.toml
config/: baseline.json  baseline_both_zscore.json  baseline_both_zscore_conv_spk.json  config.json  config_dev.json  fisher_no_embeddings_128_1_autoregressive.json  fisher_no_embeddings_128_1_nonautoregressive.json  fisher_no_embeddings_256_1_autoregressive.json  fisher_no_embeddings_256_1_nonautoregressive.json  fisher_no_embeddings_256_2_autoregressive.json  fisher_no_embeddings_256_3_autoregressive.json  fisher_no_embeddings_32_1_autoregressive.json  fisher_no_embeddings_32_1_autoregressive_bothsides.json  fisher_no_embeddings_32_1_nonautoregressive.json  fisher_no_embeddings_32_1_nonautoregressive_bothsides.json  fisher_no_embeddings_32_2_autoregressive.json  fisher_no_embeddings_32_2_autoregressive_htop.json  fisher_no_embeddings_512_1_autoregressive.json  fisher_no_embeddings_64_1_autoregressive.json  fisher_no_embeddings_64_1_nonautoregressive.json  ist_att_both.json  ist_att_decoder.json  ist_att_decoder_logistic.json  ist_att_encoder_logistic.json  ist_att_encoder_tanh.json
src/cdmodel/: main.py
src/cdmodel/common/: __init__.py  consts.py  data.py  model.py  role_assignment.py
src/cdmodel/data/: __init__.py  collate_fn.py  datamodule.py  dataset.py
src/cdmodel/model/: __init__.py  cdmodel.py  components.py  types.py  util.py
src/cdmodel/model/components/: attention.py  components.py  decoder.py  embeddings_encoder.py  encoder.py  ext_ist.py  ist_encoder.py
src/cdmodel/model/util/: ext_ist.py  util.py
src/cdmodel/util/: split.py  visualization.py
tests/common/role_assignment/: test__get_speaker_role_assignment_dataset.py  test_assign_speaker_roles.py
tests/data/: fixtures.py
tests/data/collate_fn/: test_collate_fn.py
tests/data/dataset/: test_dataset_zero_pad.py  test_embeddings.py  test_metadata.py  test_prediction_metadata.py  test_segment_features.py  test_segment_features_sides_agentpartner_both.py  test_segment_features_sides_agentpartner_first.py  test_segment_features_sides_agentpartner_second.py  test_segment_features_sides_both.py  test_transcript.py
tests/data/dataset/ExampleDataset/: test_ExampleDataset.py
tests/fixtures/dataset/glove/: 1-embeddings.pt  1-lengths.pt  2-embeddings.pt  2-lengths.pt
tests/fixtures/dataset/roberta/: 1-embeddings.pt  2-embeddings.pt
tests/fixtures/dataset/segments/: 1.json  2.json
