[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "cdmodel"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = ">=3.13.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "hyphenate==1.1.0",
    "jsonargparse[signatures]==4.41.0",
    "librosa==0.11.0",
    "lightning==2.5.5",
    "matplotlib==3.10.6",
    "nltk==3.9.2",
    "numpy==2.2.6",
    "orjson==3.11.3",
    "pandas==2.3.3",
    "praat-parselmouth==0.4.6",
    "pyarrow==21.0.0",
    "pytest==8.4.2",
    "seaborn==0.13.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "statsmodels==0.14.5",
    "tensorboard==2.20.0",
    "torch==2.8.0",
    "transformers==4.57.0"
]

[tool.setuptools.package-data]
"cdmodel" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
cdmodel = "cdmodel.main:cli_main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"