[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "cdmodel"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = ">=3.13.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.3.2",
    "hyphenate==1.1.0",
    "jsonargparse[signatures]==4.48.0",
    "librosa==0.11.0",
    "lightning==2.6.1",
    "matplotlib==3.10.8",
    "nltk==3.9.4",
    "numpy==2.4.4",
    "openpyxl==3.1.5",
    "pandas==3.0.2",
    "pandas-stubs==3.0.0.260204",
    "pqdm==0.2.0",
    "praat-parselmouth==0.4.7",
    "pyarrow==23.0.1",
    "pyphen==0.17.2",
    "pytest==9.0.3",
    "seaborn==0.13.2",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "tensorboard==2.20.0",
    "torch==2.11.0",
    "transformers==5.5.4",
    "tqdm==4.67.3",
    "types-tqdm==4.67.3.20260408"
]

[tool.setuptools.package-data]
"cdmodel" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
cdmodel = "cdmodel.main:cli_main"
evaluate = "cdmodel.evaluate:cli_main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"