[build-system]
requires = ["setuptools>=75.8"]
build-backend = "setuptools.build_meta"

[project]
name = "cdmodel"
version = "0.0.1"
authors = [
  { name="Author Name", email="email@example.com" },
]
description = "description"
readme = "README.md"
requires-python = ">=3.13.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.4.1",
    "hyphenate==1.1.0",
    "ipywidgets==8.1.8",
    "jsonargparse[signatures]==4.49.0",
    "librosa==0.11.0",
    "lightning==2.6.5",
    "matplotlib==3.11.0",
    "nltk==3.9.4",
    "numpy==2.5.0",
    "openpyxl==3.1.5",
    "pandas==3.0.3",
    "pandas-stubs==3.0.3.260530",
    "pqdm==0.2.0",
    "praat-parselmouth==0.4.7",
    "pyarrow==24.0.0",
    "pyphen==0.17.2",
    "pytest==9.1.1",
    "seaborn==0.13.2",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "statsmodels==0.14.6",
    "tensorboard==2.20.0",
    "torch==2.12.1",
    "tqdm==4.68.3",
    "transformers==5.12.1",
    "types-PyYAML==6.0.12.20260518"
    "types-tqdm==4.68.0.20260608"
]

[tool.setuptools.package-data]
"cdmodel" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/mattm458/ml-template"
"Bug Tracker" = "https://github.com/mattm458/ml-template/issues"

[project.scripts]
cdmodel = "cdmodel.main:cli_main"
evaluate = "cdmodel.evaluate:cli_main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
testpaths = "tests"